@@ -1,5 +1,6 @@
 Changelog for GoodNews
 
+- added new GDPR fields (activatedon, ip_activated) to subscribers export
 - better UI for auto-refresh button
 - better UI/UX for emergency stop of worker processes
 - remastered the initialization process
